--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>SystemJs-Jade plugin test</title>
   <script src="jspm_packages/system.js"></script>
+  <script src="config.js"></script>
   <script>
     System.import('./test.jade!')
     .then(function(fn) {
