Fix up tests. Include test for jspm bundle.

--- a/test-bundle.html
+++ b/test-bundle.html
@@ -5,6 +5,7 @@
   <title>SystemJs-Jade plugin test</title>
   <script src="jspm_packages/system.js"></script>
   <script src="config.js"></script>
+  <script src="build.js"></script>
 </head>
 <body>
     Wait a few seconds...
